--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:coverage": "jest --coverage",
+    "test:coverage": "jest --silent --ci --coverage --coverageReporters="text" --coverageReporters="text-summary"",
     "convert": "node index.js"
   },
   "author": "Petr Brzek",
