--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,3 +28,13 @@ jobs:
         cache: 'yarn'
     - run: yarn install --frozen-lockfile
     - run: yarn test
+    
+  coverage:
+        runs-on: ubuntu-latest
+        if: "!contains(github.event.head_commit.message, '[skip ci]')"
+        steps:
+            - uses: actions/checkout@v2
+            - uses: artiomtr/jest-coverage-report-action@v2.0-rc.4
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  test-script: test:coverage
