coverage manager update

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,4 +37,4 @@ jobs:
             - uses: artiomtr/jest-coverage-report-action@v2.0-rc.4
               with:
                   github-token: ${{ secrets.GITHUB_TOKEN }}
-                  test-script: test:coverage
+                  package-manager: yarn
