fix: some keywords added for better project visibility

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e2e-stories",
   "version": "0.1.5",
   "description": "E2E testing with Jest and Puppeteer, flavored with simplified Yaml syntax.",
-  "keywords": ["jest", "puppeteer", "e2e-testing", "testing", "stories", "avocode"],
+  "keywords": ["jest", "puppeteer", "nodejs", "yaml", "typescript", "javascript", "e2e-tests", "e2e", "testing-tools", "tests", "stories", "avocode"],
   "main": "index.js",
   "repository": "https://github.com/avocode/e2e-stories/",
   "contributors": [
